src/assets/css/style.css
* {
    font-family: sans-serif;
}

html, body {
    margin: 0 0;
    padding: 0 0;
    min-height: 100%;
    background-color: #eee;
}

body
{
    height: 100%;
}

h1, h2, h3, h4, h5, h6, p {
    margin: 0 0;
    padding: 0 0;
    display: inline-block;
}

.subtitle {
    font-weight: bold;
    color: rgba(33, 33, 33, 0.4);
}

/*
 * Navbar style
 */
nav {
    position: fixed;
    left: 0;
    top: 0;
    bottom: 0;
    width: 15%;
    background-color: #A52F73;
    z-index: 1;
}

nav .brand-name {
    font-weight: bold;
    color: #eee;
    text-align: center;
    width: 100%;
    font-size: 3vw;
    padding: 0 0;
    margin: 10px 0;
}

nav hr {
    width: 80%;
    margin: 0 10%;
    border: 1px solid rgba(233, 233, 233, 0.5);
}

nav ul {
    list-style: none;
    margin: 0 0;
    padding: 0 0;
    width: 100%;
}

nav ul li {
    width: 100%;
    min-height: 60px;
    text-align: center;
    line-height: 60px;
    transition: background-color 0.2s;
}

nav a {
    text-decoration: none;
    color: #eee;
    font-weight: bold;
    font-size: 25px;
}

nav a:hover {
    text-decoration: none;
    color: #eee;
    font-weight: bold;
    font-size: 25px;
}

nav ul li.active {
    background-color: #89275f;
}
nav ul li:hover {
    background-color: #89275f;
    transition: background-color 0.2s;
}

nav .bottom {
    position: absolute;
    width: 100%;
    bottom: 0;
}

nav .bottom a {
    display: block;
    width: 100%;
    text-align: center;
    height: 60px;
    line-height: 60px;
    transition: background-color 0.2s;
}

nav .bottom a:hover {
    background-color: #89275f;
    transition: background-color 0.2s;
}

/*
 * Main content style
 */
main {
    position: relative;
    margin-left: 15%;
    padding: 0px;
    height: 100%;
}

a {
    color: #3498db;
    transition: 0.2s color;
    font-weight: bold;
}

a:hover {
    color: #2980b9;
    transition: 0.2s color;
}

/*
 * Footer style
 */
footer {
    position: fixed;
    bottom: 0;
    height: 30px;
    line-height: 30px;
    background-color: #eee;
    width: 100%;
    text-align: right;
    box-sizing: border-box;
    padding: 0 58px;
    font-weight: bold;
    z-index: 0;
}

footer.modal-open {
    position: fixed;
}

/*
 * Horizontal table system and cards
 */
.horizontal-table, .vertical-table
{
    white-space: nowrap;
    position: absolute;
    right: 0;
    left: 0px;
    top: 0;
    bottom: 30px;
    overflow: auto;
}

.horizontal-table {
    min-height: 100vh;
}

.horizontal-table .table-title, .vertical-table .table-title {
    margin: 20px 10px;
    display: block;
}

.horizontal-table .table-card
{
    display: inline-block;
    background-color: #fff;
    margin: 0 20px;
    padding: 10px;
    width: 450px;
    word-break: normal;
    white-space:normal;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
    vertical-align: top;
}

.vertical-table .table-card {
    display: block;
    background-color: #fff;
    margin: 20px 20px;
    padding: 10px;
    word-break: normal;
    white-space:normal;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
    overflow-x: auto;
    white-space: nowrap;
}

.vertical-table .card {
    display: inline-block;
    vertical-align: top;
    margin: 0 15px;
    max-width: 450px;
}

.vertical-table .add-slide {
    width: 450px;
}

/*
 * Card design
 */
.card
{
    background-color: #fff;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
    margin: 10px 0;
    padding: 10px;
    transition: background-color 0.2s;
}

.card-hover:hover {
    background-color: #eee;
    cursor: pointer;
    transition: background-color 0.2s;
}

.card-title {
    font-size: 20px;
}

/*
 * Buttons design
 */
.btn {
    background-color: transparent;
    border: none;
    border-radius: 5px;
    padding: 5px 25px;
    font-weight: bold;
    text-decoration: none;
    color: #333;
    font-weight: normal;
    font-size: 18px;
    text-align: center;
    box-sizing: border-box;
}

.btn-xs {
    padding: 1px 5px;
}

.btn:hover {
    cursor: pointer;
}

.btn-red {
    background-color: #e74c3c;
    border: 2px solid #c0392b;
    color: #eee;
}

.btn-red:hover {
    background-color: #c0392b;
    transition: 0.2s background-color;
}

.btn-blue {
    background-color: #3498db;
    border: 2px solid #2980b9;
    color: #eee;
}

.btn-blue:hover {
    background-color: #2980b9;
    transition: 0.2s background-color;
}

.btn-outline-blue {
    border: 2px solid #2980b9;
    color: #2980b9;
    transition: 0.2s background-color;
}

.btn-outline-blue:hover {
    background-color: #2980b9;
    color: #eee;
    transition: 0.2s background-color;
}

.btn-outline-red {
    border: 2px solid #c0392b;
    color: #c0392b;
}

.btn-outline-red:hover {
    background-color: #c0392b;
    color: #fff;
    transition: 0.2s all;
}

.btn-outline-green {
    border: 2px solid #27ae60;
    color: #27ae60;
    transition: 0.2s all;
}

.btn-outline-green:hover {
    background-color: #27ae60;
    color: #eee;
    transition: 0.2s all;
}

.del-btn {
    display: none;
}

/*
 * Align classes
 */
.align-parent {
    position: relative;
}

.align-right {
    position: absolute;
    right: 0%;
}

/*
 * Form styling
 */
.form-group {
    width: 100%;
}


.form-group > label {
    display: block;
}

.form-control {
    border: 1px solid #333;
    border-radius: 5px;
    box-shadow: none;
    transition: 0.2s box-shadow;
    margin: 10px 0;
    width: 100%;
}

input[type="text"].form-control, select.form-control, input.form-control {
    height: 35px;
}

textarea[class="form-control"] {
    min-height: 35px;
}

pre {
    overflow-y: auto
}

.file-selector label {
    display: block;
    margin: 5px 0;
}

.file-selector input[type="file"].form-control {
    width: 0.1px;
    height: 0.1px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}

.form-control:focus {
    border: 1px solid #3498db;
    box-shadow: 0px 0px 10px #3498db;
    transition: 0.2s box-shadow;
}

/*
 * General styling
 */
.content-fluid {
    display: block;
    width: 100%;
}

/*
 * Modals
 */
.modal {
    position: absolute;
    min-height: 100%;
    width: 100%;
    z-index: 2;
}

.modal .bg {
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(33, 33, 33, 0.4);
    width: 100%;
    height: 100%;
}

.modal-content {
    position: relative;
    margin-top: 10%;
    margin-bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
    width: 60%;
    background-color: #eee;
    
    padding: 10px;
    z-index: 1;
}

.table-body.modal-open {
    overflow: hidden;
    position: fixed;
    left: 15%;
}

/*
 * Grid system
 */
.row {
    display: flex;
    flex-direction: row;
    padding: 10px 0;
}

.col-1 {
    width: 8.3333333333%;
}

.col-2 {
    width: 16.666666666%;
}

.col-3 {
    width: 25%;
}

.col-4 {
    width: 33.333333333%;
}

.col-6 {
    width: 50%;
}

.col-7 {
    width: 58.3333333333%;
}

.col-8 {
    width: 66.66666666666%;
}

.col-9 {
    width: 75%;
}

.col-11 {
    width: 91.6666666666%
}

